[gd_scene load_steps=2 format=3 uid="uid://bxxxxxxxxxxx"]

[ext_resource type="Script" uid="uid://co1kv71vcamoc" path="res://Scripts/UI/MainMenu/MainMenu.gd" id="1_o4nyn"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o4nyn")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.141176, 0.141176, 0.141176, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 100.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 36
text = "MaksimkaFindGirls"
horizontal_alignment = 1

[node name="ButtonsContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="StartButton" type="Button" parent="ButtonsContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Начать игру"

[node name="SettingsButton" type="Button" parent="ButtonsContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Настройки"

[node name="ExitButton" type="Button" parent="ButtonsContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Выйти"

[connection signal="pressed" from="ButtonsContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="ButtonsContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="ButtonsContainer/ExitButton" to="." method="_on_exit_button_pressed"]
